ivodellambrogio/ivodellambrogio-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ivodellambrogio
  namespace: ivodellambrogio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/modsecurity-transaction-id: "$request_id"
spec:
  ingressClassName: nginx
  rules:
    - host: ivodellambrogio.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ivodellambrogio
                port:
                  number: 80
    - host: www.ivodellambrogio.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ivodellambrogio
                port:
                  number: 80
  tls:
    - hosts:
        - ivodellambrogio.ch
        - www.ivodellambrogio.ch
      secretName: ivodellambrogio-cert
